# turtleterrain

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  terrain_nav2.launch.py  terrain_waypoint.launch.py  turtlebot3_world.launch.py  turtleterrain_world.launch.py
map/: final_terrain.pgm  final_terrain.yaml  flat_tree_terrain.pgm  flat_tree_terrain.yaml  terrain_map.pgm  terrain_map.yaml
models/turtlebot3_burger/: lidar_model.sdf  model.config
models/turtlebot3_waffle/: model.config  model.sdf
models/turtlebot3_world/: complex_terrain.sdf  cube_terrain.sdf  cube_terrain_hole.sdf  (+8 more)
open3d/: A_star.py  a_star.py  bidirectional_a_star.py  bidirectional_a_star_v2.py  kd_tree_search.py  np_pcd.py  pcd_tensor.py  pcd_visualization.py  planar_patch_detection.py  process_fph_1.xyz  surface_points_tensor.xyz  surface_reconstruction.py  terrain_cloud_processing.py  test_a_star.py
param/: mapper_params_online_async.yaml  nav2_params.yaml  terrain.yaml
rviz/: turtleterrain_gazebo.rviz
scripts/: action_waypoint_follower_node.py  amcl_pose_pub.py  cloud_processing.py  path_follower_node.py  path_planner_node.py  path_planning.py  pc_snapshot_node.py  pc_visualizer_node.py  pcd_subscriber_node.py  planar_patch_detection_node.py  robot_navigator.py  robot_pcd.py  scan_subscriber_node.py  simple_cmd.py  target_pose_pub.py  terrain_fsm_node.py  test_node.py
urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf
videos/: final_terrain_shotcut.mlt  ramp_terrain_shotcut.mlt
(+12 files in other folders)
