<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtleterrain</name>
  <version>0.0.0</version>
  <description>
    Gazebo simulation package for a custom TurtleBot3 terrain
  </description>
  <maintainer email="danielwjkhoo@gmail.com">Daniel</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://your-project-website.com</url>
  <url type="repository">https://github.com/your-github-username/turtleterrain</url>
  <url type="bugtracker">https://github.com/your-github-username/turtleterrain/issues</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
